--- a/temalar/sosero/haber.html
+++ b/temalar/sosero/haber.html
@@ -2,8 +2,8 @@
 layout: sosero/haber
 title: SOSERO ÜRÜN
 ---
-      <div data-gnl="22 23p ortada" data-kçk="sığdır" style="height:70vh;">
-        <div data-gnl="22 23p">
+      <div data-gnl="22 23p ortada" style="min-height:60vh; padding: 0 20px; margin: 0 0 auto 0; ">
+
           <article class="product" data-gnl="1 1p sütun" style="justify-content:space-between;">
             <div class="product-content" data-gnl="1 1p sığdır kaymadan">
               <div data-gnl="1 1p" data-kçk="1 2p sığdır sütun ortada kaymadan">
@@ -45,5 +45,4 @@ title: SOSERO ÜRÜN
             </div>
             <div class="boş"></div>
           </article>
-        </div>
       </div>
