--- a/temalar/sosero/haberler.html
+++ b/temalar/sosero/haberler.html
@@ -4,8 +4,9 @@ title: SOSERO ÜRÜN
 ---
 
         <div  class="news-slider slider">
-            
+
             <article class="product" data-gnl="1 1p" data-byk="1 2p">
+              <a href="/temalar/sosero/haber.html">
               <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
                 <div data-gnl="1 1p kaymadan" style="height: 200px;">
                   <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
@@ -25,8 +26,10 @@ title: SOSERO ÜRÜN
 
                 </div>
               </div>
+              </a>
             </article>
             <article class="product" data-gnl="1 1p" data-byk="1 2p">
+              <a href="/temalar/sosero/haber.html">
               <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
                 <div data-gnl="1 1p kaymadan" style="height: 200px;">
                   <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
@@ -46,8 +49,10 @@ title: SOSERO ÜRÜN
 
                 </div>
               </div>
+              </a>
             </article>
             <article class="product" data-gnl="1 1p" data-byk="1 2p">
+              <a href="/temalar/sosero/haber.html">
               <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
                 <div data-gnl="1 1p kaymadan" style="height: 200px;">
                   <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
@@ -67,8 +72,10 @@ title: SOSERO ÜRÜN
 
                 </div>
               </div>
+              </a>
             </article>
             <article class="product" data-gnl="1 1p" data-byk="1 2p">
+              <a href="/temalar/sosero/haber.html">
               <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
                 <div data-gnl="1 1p kaymadan" style="height: 200px;">
                   <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
@@ -88,8 +95,10 @@ title: SOSERO ÜRÜN
 
                 </div>
               </div>
+              </a>
             </article>
             <article class="product" data-gnl="1 1p" data-byk="1 2p">
+              <a href="/temalar/sosero/haber.html">
               <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
                 <div data-gnl="1 1p kaymadan" style="height: 200px;">
                   <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
@@ -109,8 +118,10 @@ title: SOSERO ÜRÜN
 
                 </div>
               </div>
+              </a>
             </article>
             <article class="product" data-gnl="1 1p" data-byk="1 2p">
+              <a href="/temalar/sosero/haber.html">
               <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
                 <div data-gnl="1 1p kaymadan" style="height: 200px;">
                   <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
@@ -130,8 +141,10 @@ title: SOSERO ÜRÜN
 
                 </div>
               </div>
+              </a>
             </article>
             <article class="product" data-gnl="1 1p" data-byk="1 2p">
+              <a href="/temalar/sosero/haber.html">
               <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
                 <div data-gnl="1 1p kaymadan" style="height: 200px;">
                   <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
@@ -151,6 +164,6 @@ title: SOSERO ÜRÜN
 
                 </div>
               </div>
+              </a>
             </article>
-
         </div>
