--- a/temalar/sosero/index.html
+++ b/temalar/sosero/index.html
@@ -6,7 +6,7 @@ title: SOSERO
 <p></p>
 <img data-gnl="8 9p ortada-ol" data-kçk="1 4p" src="/temalar/sosero/assets/img/ögeler.png" alt="">
 <p data-gnl="1 1p ortada metin-ortada">
-  <a href="urunler.html">
-    ÖZEL LEZZETLERİMİZİ<br>HEMEN KEŞFEDİN
+  <a class="intro-text" href="urunler.html">
+    ÖZEL LEZZETLERİMİZİ<br>HEMEN KEŞFEDİN<br>▽
   </a>
 </p>
