--- a/temalar/sosero/haber.html
+++ b/temalar/sosero/haber.html
@@ -5,12 +5,12 @@ title: SOSERO ÜRÜN
       <div data-gnl="22 23p ortada" style="min-height:60vh; padding: 0 20px; margin: 0 0 auto 0; ">
 
           <article class="product" data-gnl="1 1p sütun" style="justify-content:space-between;">
-            <div class="product-content" data-gnl="1 1p sığdır kaymadan">
-              <div data-gnl="1 1p" data-kçk="1 2p sığdır sütun ortada kaymadan">
+            <div class="product-content" data-gnl="1 1p" data-byk="sığdır kaymadan">
+              <div data-gnl="1 1p" data-byk="1 2p sığdır sütun ortada kaymadan">
                 <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
               </div>
-              <div data-gnl="1 1p ortada" data-kçk="1 2p sığdır" style="background-color:rgba(55,138,0,.9); color:#fff;">
-                <div data-gnl="6 7p üstte" style="padding-bottom:40px;">
+              <div data-gnl="1 1p ortada" data-byk="1 2p sığdır" style="margin-bottom:25px; background-color:rgba(55,138,0,.9); color:#fff;">
+                <div data-gnl="11 12p üstte" style="padding-bottom:20px;">
                   <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
                   <p>
                     Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
