--- a/temalar/sosero/urun.html
+++ b/temalar/sosero/urun.html
@@ -2,15 +2,15 @@
 layout: sosero/urun
 title: SOSERO ÜRÜN
 ---
-      <div data-gnl="22 23p ortada" data-byk="1 1p">
-        <div data-gnl="22 23p">
-          <article class="product" data-gnl="1 1p" style="justify-content:space-between;">
+      <div data-gnl="23 24p ortada" style="padding: 0 20px;">
+        <div data-gnl="1 1p">
+          <article class="product detail" data-gnl="1 1p" style="justify-content:space-between;">
             <div class="product-content" data-gnl="1 1p kaymadan" data-kçk="sığdır">
               <div data-gnl="1 1p" data-kçk="1 2p sığdır sütun ortada kaymadan">
                 <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
               </div>
               <div data-gnl="1 1p ortada" data-kçk="1 2p sığdır" style="background-color:#ffc900;">
-                <div data-gnl="6 7p üstte" style="padding-bottom:40px;">
+                <div data-gnl="11 12p üstte" style="padding-bottom:40px;">
                   <h1>Közlenmiş Biber</h1>
                   <p>İnsanları canlandıran ümit ve güzel hayaldir. Ümidini kaybetmiş olanın, başka kaybedecek şeyi olmaz. Güzel gören güzel düşünür, güzel düşünen hayatından tat alır. Güzel sözler petekten damla damla sızan bala benzer. İstediğini söyleyen, istemediğini işitir. </p>
                   <table class="product-detail">
