--- a/temalar/sosero/haber.html
+++ b/temalar/sosero/haber.html
@@ -2,15 +2,14 @@
 layout: sosero/haber
 title: SOSERO ÜRÜN
 ---
-      <div data-gnl="22 23p ortada" style="min-height:60vh; padding: 0 20px; margin: 0 0 auto 0; ">
-
-          <article class="product" data-gnl="1 1p sütun" style="justify-content:space-between;">
-            <div class="product-content" data-gnl="1 1p" data-byk="sığdır kaymadan">
+      <div data-gnl="22 23p ortada" style="padding: 20px;">
+          <article class="product full-detail product-content" data-gnl="1 1p sütun">
+            <div class="" data-gnl="1 1p" data-byk="sığdır kaymadan">
               <div data-gnl="1 1p" data-byk="1 2p sığdır sütun ortada kaymadan">
                 <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
               </div>
-              <div data-gnl="1 1p ortada" data-byk="1 2p sığdır" style="margin-bottom:25px; background-color:rgba(55,138,0,.9); color:#fff;">
-                <div data-gnl="11 12p üstte" style="padding-bottom:20px;">
+              <div class="content" data-gnl="1 1p üstte" data-byk="1 2p sığdır">
+                  <span class="date">Nisan 21, 2018</span>
                   <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
                   <p>
                     Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
@@ -40,7 +39,7 @@ title: SOSERO ÜRÜN
                     kaybetmeden kapınıza kadar gelen hizmetin ve lezzetin tadını
                     çıkarabilirsiniz.
                   </p>
-                </div>
+
               </div>
             </div>
             <div class="boş"></div>
