--- a/temalar/sosero/haberler.html
+++ b/temalar/sosero/haberler.html
@@ -21,7 +21,7 @@ title: SOSERO ÜRÜN
                     </p>
                 </div>
               </div>
-              <div class="kesme" data-kçk="1 23p küçükleri-gizle sağda">
+              <div class="kesme" data-byk="1 23p küçükleri-gizle sağda">
                 <div class="kesit">
 
                 </div>
@@ -44,7 +44,7 @@ title: SOSERO ÜRÜN
                     </p>
                 </div>
               </div>
-              <div class="kesme" data-kçk="1 23p küçükleri-gizle sağda">
+              <div class="kesme" data-byk="1 23p küçükleri-gizle sağda">
                 <div class="kesit">
 
                 </div>
@@ -67,7 +67,7 @@ title: SOSERO ÜRÜN
                     </p>
                 </div>
               </div>
-              <div class="kesme" data-kçk="1 23p küçükleri-gizle sağda">
+              <div class="kesme" data-byk="1 23p küçükleri-gizle sağda">
                 <div class="kesit">
 
                 </div>
@@ -90,7 +90,7 @@ title: SOSERO ÜRÜN
                     </p>
                 </div>
               </div>
-              <div class="kesme" data-kçk="1 23p küçükleri-gizle sağda">
+              <div class="kesme" data-byk="1 23p küçükleri-gizle sağda">
                 <div class="kesit">
 
                 </div>
@@ -113,7 +113,7 @@ title: SOSERO ÜRÜN
                     </p>
                 </div>
               </div>
-              <div class="kesme" data-kçk="1 23p küçükleri-gizle sağda">
+              <div class="kesme" data-byk="1 23p küçükleri-gizle sağda">
                 <div class="kesit">
 
                 </div>
@@ -136,7 +136,7 @@ title: SOSERO ÜRÜN
                     </p>
                 </div>
               </div>
-              <div class="kesme" data-kçk="1 23p küçükleri-gizle sağda">
+              <div class="kesme" data-byk="1 23p küçükleri-gizle sağda">
                 <div class="kesit">
 
                 </div>
@@ -159,7 +159,7 @@ title: SOSERO ÜRÜN
                     </p>
                 </div>
               </div>
-              <div class="kesme" data-kçk="1 23p küçükleri-gizle sağda">
+              <div class="kesme" data-byk="1 23p küçükleri-gizle sağda">
                 <div class="kesit">
 
                 </div>
