--- a/temalar/sosero/haberler.html
+++ b/temalar/sosero/haberler.html
@@ -7,7 +7,7 @@ title: SOSERO ÜRÜN
 
             <article class="product" data-gnl="1 1p" data-byk="1 2p">
               <a href="/temalar/sosero/haber.html">
-              <div class="product-content" data-gnl="1 1p kaymadan sağda-ol">
+              <div class="product-content" data-gnl="1 1p kaymadan sağda-ol" data-byk="22 23p">
                 <div data-gnl="1 1p kaymadan" style="height: 200px;">
                   <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
                 </div>
@@ -30,7 +30,7 @@ title: SOSERO ÜRÜN
             </article>
             <article class="product" data-gnl="1 1p" data-byk="1 2p">
               <a href="/temalar/sosero/haber.html">
-              <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
+              <div class="product-content" data-gnl="1 1p kaymadan sağda-ol" data-byk="22 23p">
                 <div data-gnl="1 1p kaymadan" style="height: 200px;">
                   <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
                 </div>
@@ -53,7 +53,7 @@ title: SOSERO ÜRÜN
             </article>
             <article class="product" data-gnl="1 1p" data-byk="1 2p">
               <a href="/temalar/sosero/haber.html">
-              <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
+              <div class="product-content" data-gnl="1 1p kaymadan sağda-ol" data-byk="22 23p">
                 <div data-gnl="1 1p kaymadan" style="height: 200px;">
                   <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
                 </div>
@@ -76,7 +76,7 @@ title: SOSERO ÜRÜN
             </article>
             <article class="product" data-gnl="1 1p" data-byk="1 2p">
               <a href="/temalar/sosero/haber.html">
-              <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
+              <div class="product-content" data-gnl="1 1p kaymadan sağda-ol" data-byk="22 23p">
                 <div data-gnl="1 1p kaymadan" style="height: 200px;">
                   <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
                 </div>
@@ -99,7 +99,7 @@ title: SOSERO ÜRÜN
             </article>
             <article class="product" data-gnl="1 1p" data-byk="1 2p">
               <a href="/temalar/sosero/haber.html">
-              <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
+              <div class="product-content" data-gnl="1 1p kaymadan sağda-ol" data-byk="22 23p">
                 <div data-gnl="1 1p kaymadan" style="height: 200px;">
                   <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
                 </div>
@@ -122,7 +122,7 @@ title: SOSERO ÜRÜN
             </article>
             <article class="product" data-gnl="1 1p" data-byk="1 2p">
               <a href="/temalar/sosero/haber.html">
-              <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
+              <div class="product-content" data-gnl="1 1p kaymadan sağda-ol" data-byk="22 23p">
                 <div data-gnl="1 1p kaymadan" style="height: 200px;">
                   <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
                 </div>
@@ -145,7 +145,7 @@ title: SOSERO ÜRÜN
             </article>
             <article class="product" data-gnl="1 1p" data-byk="1 2p">
               <a href="/temalar/sosero/haber.html">
-              <div class="product-content" data-gnl="22 23p kaymadan sağda-ol">
+              <div class="product-content" data-gnl="1 1p kaymadan sağda-ol" data-byk="22 23p">
                 <div data-gnl="1 1p kaymadan" style="height: 200px;">
                   <img class="tam" src="/temalar/sosero/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
                 </div>
