--- a/temalar/sosero/index.html
+++ b/temalar/sosero/index.html
@@ -2,11 +2,12 @@
 layout: sosero/giri
 title: SOSERO
 ---
-<p></p>
-<p></p>
-<img data-gnl="8 9p ortada-ol" data-kçk="1 2p" src="/temalar/sosero/assets/img/ögeler.png" alt="">
-<p data-gnl="1 1p ortada metin-ortada">
-  <a class="intro-text" href="urunler.html">
+<div data-gnl="1 1p sütun dürmeden göbekte" style="text-align:center; align-items:center;">
+
+  <img src="/temalar/sosero/assets/img/ögeler.png" alt="">
+
+  <a class="intro-text" style="width:100%;" href="urunler.html">
     ÖZEL LEZZETLERİMİZİ<br>HEMEN KEŞFEDİN<br>▽
   </a>
-</p>
+
+</div>
