--- a/temalar/sosero/index.html
+++ b/temalar/sosero/index.html
@@ -2,11 +2,10 @@
 layout: sosero/giri
 title: SOSERO
 ---
-<div data-gnl="1 1p sütun dürmeden göbekte" style="text-align:center; align-items:center;">
+<div data-gnl="1 1p sütun sığdır dürmeden altta" style="text-align:center; align-items:center;">
+  <img src="/temalar/sosero/assets/img/ögeler.png" alt="" style="max-height:70%;">
 
-  <img src="/temalar/sosero/assets/img/ögeler.png" alt="">
-
-  <a class="intro-text" style="width:100%;" href="urunler.html">
+  <a class="intro-text" href="urunler.html">
     ÖZEL LEZZETLERİMİZİ<br>HEMEN KEŞFEDİN<br>▽
   </a>
 
