--- a/temalar/sosero/index.html
+++ b/temalar/sosero/index.html
@@ -2,7 +2,7 @@
 layout: sosero/giri
 title: SOSERO
 ---
-<div data-gnl="1 1p sütun sığdır dürmeden altta" style="text-align:center; align-items:center;">
+<div data-gnl="1 1p sütun sığdır dürmeden altta" style="text-align:center; align-items:center; justify-items: flex-end;">
   <img src="/temalar/sosero/assets/img/ögeler.png" alt="" style="max-height:70%;">
 
   <a class="intro-text" href="urunler.html">
