--- a/temalar/sosero/index.html
+++ b/temalar/sosero/index.html
@@ -3,10 +3,11 @@ layout: sosero/giri
 title: SOSERO
 ---
 <div data-gnl="1 1p sütun sığdır dürmeden altta" style="text-align:center; align-items:center; justify-items: flex-end;">
-  <img src="/temalar/sosero/assets/img/ögeler.png" alt="" style="max-height:70%;">
+  <img src="/temalar/sosero/assets/img/ögeler.png" alt="" style="max-height:70vh;">
 
-  <a class="intro-text" href="urunler.html">
-    ÖZEL LEZZETLERİMİZİ<br>HEMEN KEŞFEDİN<br>▽
+  <a class="intro-text" href="urunler.html" style="padding:20px;">
+    ÖZEL LEZZETLERİMİZİ<br>HEMEN KEŞFEDİN<br>
+    <i class="simge-ok-alt"></i>
   </a>
 
 </div>
