--- a/temalar/ilker/index.html
+++ b/temalar/ilker/index.html
@@ -1,54 +1,7 @@
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Deveb | İlker.Tema Anasayfa</title>
-
-  <!-- Kök -->
-  <link href="/temalar/ilker/assets/css/deveb.css" rel="stylesheet">
-  <link href="/temalar/ilker/assets/css/ilker.css" rel="stylesheet">
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-</head>
-<body data-gnl="">
-  <header data-gnl="1 1p">
-    <div data-gnl="kaplama">
-      <nav>
-        <div class="" data-gnl="0 göbekte">
-          İLKER
-        </div>
-        <input id="menü-0by" type="checkbox" data-kapaç="sağda">
-        <label for="menü-0by">•••</label>
-        <label for="menü-0by">✕</label>
-        <ul data-menü="basit yatay" data-gnl="solda" data-kçk="sağda">
-          <li><a href="#">Anasayfa</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Hakkımızda</a></li>
-          <li><a href="#">İletişim</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-  <div data-gnl="1 1p" class="alan">
-    <div data-gnl="kaplama">
-      Arkaplanı renkli alan
-    </div>
-  </div>
-  <article data-gnl="1 1p">
-    <div data-gnl="kaplama">
-    Yazılar
-    </div>
-  </article>
-  <footer data-gnl="1 1p">
-    <div data-gnl="kaplama">
-      Burası Site Altı
-    </div>
-  </footer>
-</body>
-</html>
+---
+layout: ilker/temel
+title: Deveb | İlker.Tema Anasayfa
+alan: Deveb İlker Temasına Hoş Geldiniz
+alan-alt: Geliştirmeye devam ediyoruz.
+---
+deneme
