--- a/temalar/sosero/haber.html
+++ b/temalar/sosero/haber.html
@@ -2,7 +2,7 @@
 layout: sosero/haber
 title: SOSERO ÜRÜN
 ---
-      <div data-gnl="22 23p ortada" style="padding: 20px;">
+      <div data-gnl="22 23p 1g ortada" style="padding: 20px;">
           <article class="product full-detail product-content" data-gnl="1 1p sütun">
             <div class="" data-gnl="1 1p" data-byk="sığdır kaymadan">
               <div data-gnl="1 1p" data-byk="1 2p sığdır sütun ortada kaymadan">
