--- a/1.0/tr/kap-orgusu.html
+++ b/1.0/tr/kap-orgusu.html
@@ -1,19 +1,19 @@
 ---
-layout: default
-title: Kap Örgüsü (s0.93)
+layout: s1n0/varsayilan
+title: Kap Örgüsü 1.0
 ---
     <p>
-      İşte bu! Tek düzende çalışmak zorunda olmaktan kurtuldunuz. Çoklu kap örgüsü
-      (multi-grid system) özellikleriyle kullanıma hazır.
+      İşte bu! Tek düzende çalışmaya bağlı kalmaktan kurtuldunuz. Çoklu kap örgüsü
+      (multi-grid system) özellikleriyle birlikte kullanıma hazır.
     </p>
     <p>
       Deveb'in kap örgüsü size aynı anda dilediğiniz düzeni kullanabilmeyi sağlar.
       12'li, 16'lı, 24'lü... Yani 1'li düzenden 24'lü düzene kadar hepsini aynı
-      anda kullanabilirsiniz. Hala anlaşılmadı mı? O halde şöyle anlatalım;
+      anda kullanabilirsiniz. Anlaşılmadı mı? O halde şöyle anlatalım;
     </p>
     <p>
       Diğer önyüz çatılarında kap örgüleri (grid system) sabittir. Yani bir tane
-      düzen seçmek zorundasınızdır. Eğer 24'lü düzen seçtiyseniz tüm tasarımınızı
+      düzen seçmek ve kullanmak zorundasınızdır. Eğer 24'lü düzen seçtiyseniz tüm tasarımınızı
       24'lü düzeni dikkate alarak yapmak zorundasınızdır. Düzeni değiştirdiğinizde
       html tarafında yazdığınız tüm değerler yeni düzene göre değerler alacaktır.
       Bu da tasarımınızı bozacaktır. Bunun yanında tasarımınızı yaparken ölçeklerin
