--- a/1.0/tr/kap-orgusu.html
+++ b/1.0/tr/kap-orgusu.html
@@ -2,77 +2,71 @@
 layout: s1n0/varsayilan
 title: Kap Örgüsü 1.0
 ---
-    <p>
-      İşte bu! Tek düzende çalışmaya bağlı kalmaktan kurtuldunuz. Çoklu kap örgüsü
-      (multi-grid system) özellikleriyle birlikte kullanıma hazır.
-    </p>
-    <p>
-      Deveb'in kap örgüsü size aynı anda dilediğiniz düzeni kullanabilmeyi sağlar.
-      12'li, 16'lı, 24'lü... Yani 1'li düzenden 24'lü düzene kadar hepsini aynı
-      anda kullanabilirsiniz. Anlaşılmadı mı? O halde şöyle anlatalım;
-    </p>
-    <p>
-      Diğer önyüz çatılarında kap örgüleri (grid system) sabittir. Yani bir tane
-      düzen seçmek ve kullanmak zorundasınızdır. Eğer 24'lü düzen seçtiyseniz tüm tasarımınızı
-      24'lü düzeni dikkate alarak yapmak zorundasınızdır. Düzeni değiştirdiğinizde
-      html tarafında yazdığınız tüm değerler yeni düzene göre değerler alacaktır.
-      Bu da tasarımınızı bozacaktır. Bunun yanında tasarımınızı yaparken ölçeklerin
-      size tam hitap etmediğini fark edeceksiniz. Keşkeler içinizde oluşmaya başlayacak...
-      Bu nedenle tam olarak istediğinize erişmek her zaman mümkün olmamakla birlikte
-      özel dokunuşlar yapmak durumunda olacaksınız.
-    </p>
-    <p>
-      Siz en iyisi diğer önyüz çatılarının sunduğu özellikleri düşünmeyin. Deveb'de dilediğiniz
-      an dilediğiniz yerde kullanabileceğiniz kap örgüsünün parça düzenleri sizi
-      özgür hissettirecek. Evet, özgürlüğe çok yakınsınız. O halde zengin özelliklere sahip
-      Deveb'in kap örgüsüne hoş geldiniz!
+    <p class="girlik">
+      İşte bu! İstediğiniz yerde, istediğiniz anda, istediğiniz ölçekte
+      çalışın. Ağ sitesi tasarımlarını yaparken güçlendirilmiş ve uyarlamalı çoklu-kap örgüsünü kullanın.
+      Artık tek düzene bağlı kalmak yok. Her şey elinizin altında hazır.
     </p>
 
-    <h2>Kap Örgüsü Nedir, Nasıl Kullanılır?</h2>
+    <h1>Nasıl İşler?</h1>
     <p>
-      Kap örgüsü, kullanıldığı sayfanın içinde genişlikler tanımlamaya yarar. "Kap"
-      sözcüğünün bilinen bir anlamı da fiziksel bir şeyi bir arada tutmaya yarayan
-      nesne demektir. Deveb'in kap örgüsü, kendisine özgü kullanımıyla ilk başta
-      anlaşılmaz gibi duracak. Ancak bir kere anladığınızda işler eskisi gibi olmayacak.
+      <span class="simget">deveb</span> kap örgüsü 12'li, 16'lı, 24'lü gibi
+      1'li düzenden 24'lü düzene kadar olan tüm düzenleri aynı anda, aynı çalışma
+      sayfasında kullanabilmeyi sağlar. Diğer önyüz çatılarındaki kap örgüleri (grid system)
+      gibi tek düzende değildir. Ellerinizi bağlı tutmaz, özgürleştirir.
     </p>
     <p>
-      Parça düzeni ve genleşme düzeni olmak üzere iki ana düzenden oluşan bir kap
-      örgüsüdür. Bu düzenler kendilerine özgü özellikleri ile kullanımı tasarımcının
-      tercihine bırakılmış düzenlerdir. Bunların yanında sıralama özelliği, konumlama
-      özelliği, gizleme özelliği gibi özellikler de sizi bekliyor.
-    </p>
-    <p>
-      O halde kap örgüsüne her yerde ihtiyaç duyulacak en önemli özellikten yani
-      parça düzeninden başlayalım.
+      Satır ve sütun düzeninde kapsayıcı serileri ve diziliş özelliklerine sahiptir.
+      Esnekkutu örgüsüyle uyarlamalı olarak yapılandırılmıştır. Belleti sayfasının aşağısında örnekleri
+      ve ayrıntıları inceleyebilirsiniz. Esnekkutu ingilizcedeki karşılığı ile flexbox örgüsüne
+      yabancı olanlara gelince, <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox">Mozilla'nın esnekkutu belletileri</a>nden faydalanabilirler.
     </p>
 
+    <h2>Nedir, Nasıl Kullanılır?</h2>
+    <p>
+      Kap örgüsü, kullanıldığı sayfanın içinde çeşitli yöntemlerle genişlikler
+      tanımlamaya yarayan, konumlama ve sıralama gibi işleri yapabilen örgüdür.
+      "Kap" sözcüğünden anlaşılacağı üzere belirtilen alanın kapsayıcısıdır.
+      <span class="simget">deveb</span> kap örgüsü, kendisine özgü kullanımıyla
+      ilk başta zorlasa bile oldukça kolay yapılandırılmıştır.
+    </p>
+    <p>
+      Parça düzeni, genleşme düzeni ve sıklaşma düzeni olmak üzere üç ana kap
+      düzeninden oluşan bir kap örgüsüdür. Tasarımcı istediği düzeni anında seçip
+      kullanmaya başlayabilir. Bunların yanında sıralama özelliği, konumlama
+      özelliği, gizleme özelliği gibi özellikler de kap örgüsüne dahildir. Daha çok
+      ayrıntılı bilgi için aşağıdaki başlıkları inceleyin.
+    </p>
     <h3>Parça Düzeni</h3>
     <p>
-      Parça düzeni yüzdesel oranlarda kararlı genişlik ölçüleri tanımlamanıza yardımcıdır.
-      Ekranı satırlar olarak kurgulamak zorunda değilsiniz. Kap kavramını oturttukça
-      dilediğiniz yönde kurgularınızı oluşturabilirsiniz. Parça düzeni ile oluşturacağınız
-      kaplar nasıl bir özellikte olduğunu anında kendini size gösterecek. Hazırsanız
-      <a href="/1.0/tr/kap-orgusu/parca-duzeni.html">parça düzeni</a> belgelerini
+      Yüzdesel değerlerde ve kararlı genişliklerde ölçüler tanımlamak için yapılmıştır.
+      Kap kavramını oturttukça dilediğiniz yönde kurgularınızı çeşitlendirebilirsiniz.
+      1'den 24'e kadar parça düzenleri kullanıma hazır olarak gelir.
+      <a href="/1.0/tr/kap-orgusu/parca-duzeni.html">Parça düzeni</a> ile ilgili belleti sayfalarını
       okuyarak ayrıntılı bilgiler edinin.
     </p>
 
     <h3>Genleşme Düzeni</h3>
     <p>
-      Bu düzen yüzdesel oranlarla çalışmaktadır. Ancak html nesnesinin kenarlarından
-      içe veya dışa doğru mesafe koymak istediğinizde hesaplar biraz değişir. Bunun
-      yanı sıra satırsal olarak çalışmalısınız. Yani genleşme düzenini kullanırken
-      bir başka bölüm alttan devam etsin gibi bir isteğiniz olursa farklı yöntemlere
-      başvurmanız gerekecektir. Daha derinlemesine
-      <a href="/1.0/tr/kap-orgusu/genlesme-duzeni.html">genleşme düzenini</a>
-      inceleyin. Genleşme düzeni ve parça düzeni kıyasına bakmayı unutmayın.
+      Ögeleri bulunduğu satırda genleşme etkisiyle birlikte birbirleriyle oranlayarak
+      genişlik ölçüleri tanımlamak için yapılmıştır. Satır boyu işlevselliği olduğu için
+      alt satırdan devam edilmesi istenildiğinde özel yöntemlere başvurulur.
+      Daha iyi bellemek için <a href="/1.0/tr/kap-orgusu/genlesme-duzeni.html">genleşme düzeni
+      belleti sayfalarını</a> inceleyin.
+    </p>
+    <h3>Sıklaşma Düzeni</h3>
+    <p>
+      Daha iyi bellemek için <a href="/1.0/tr/kap-orgusu/siklasma-duzeni.html">sıklaşma düzeni
+      belleti sayfaları</a> hazırlık aşamasındadır.
     </p>
 
     <h3>Konumlama</h3>
     <p>
-      Konumlama özelliği kap örgüsünün en çok kullanılan özelliğidir. Konumlama
-      çalışmalarınızı yaparken size sunduğu olanakların işinizi ne kadar kolaylaştırdığını
-      görmeniz güç değil. Ayrıntıları incelerken her şeyi ilk seferde fark edeceğinizden
-      konuyu fazla uzatmıyor ve <a href="/1.0/tr/kap-orgusu/konumlama.html">konumlama sayfasına</a>
+      Konumlama özelliği kap örgüsünün en çok kullanılan özelliğinden bir tanesidir. Konumlama
+      yaparken sunduğu olanaklar işlerinizi çok kolaylaştıracaktır. Sağda, ortada,
+      üstte gibi konumlamaları çok rahat yapabileceksiniz. Ayrıntıları incelerken
+      her şeyi ilk bakışta fark edeceğinizden dolayı konuyu fazla uzatmıyor ve
+      <a href="/1.0/tr/kap-orgusu/konumlama.html">konumlama belleti sayfasına</a>
       yönlendiriyoruz.
     </p>
 
