deveb kurulum sayfası
Gerekli düzeltmeler yapıldı.

--- a/1.0/tr/kurulum.html
+++ b/1.0/tr/kurulum.html
@@ -19,13 +19,15 @@ title: deveb 1.0 kurulumu
     <pre data-gnl="1 1p"><code class="language-html">
     &lt;head&gt;
       &lt;link href=&quot;/css/deveb-s1n0/deveb.css&quot; rel=&quot;stylesheet&quot;&gt;
+      &lt;!-- Edge 15 ve daha eski internet explorer sürümleri için arkayüzde dahil edilecek css dosyası --&gt;
+      &lt;link href=&quot;/css/deveb-s1n0/deveb-ie.css&quot; rel=&quot;stylesheet&quot;&gt;
     &lt;/head&gt;
     </code></pre>
 
-    <h2><span class="simget">deveb</span> English Version</h2>
+    <h2><span class="simget">deveb</span> English Version (not ready)</h2>
     <pre data-gnl="1 1p"><code class="language-html">
     &lt;head&gt;
-      &lt;link href=&quot;/css/deveb.english.css&quot; rel=&quot;stylesheet&quot;&gt;
+      &lt;link href=&quot;/css/deveb-s1n0/deveb-en.css&quot; rel=&quot;stylesheet&quot;&gt;
     &lt;/head&gt;
     </code></pre>
 
