--- a/1.0/tr/kurulum.html
+++ b/1.0/tr/kurulum.html
@@ -19,7 +19,7 @@ title: deveb 1.0 kurulumu
     <pre data-gnl="1 1p"><code class="language-html">
     &lt;head&gt;
       &lt;link href=&quot;/css/deveb-s1n0/deveb.css&quot; rel=&quot;stylesheet&quot;&gt;
-      &lt;!-- Edge 15 ve daha eski internet explorer sürümleri için arkayüzde dahil edilecek css dosyası --&gt;
+      &lt;&#33;&#45;&#45; Edge 15 ve daha eski internet explorer sürümleri için arkayüzde dahil edilecek css dosyası &#45;&#45;&gt;
       &lt;link href=&quot;/css/deveb-s1n0/deveb-ie.css&quot; rel=&quot;stylesheet&quot;&gt;
     &lt;/head&gt;
     </code></pre>
