--- a/1.0/tr/kap-orgusu/parca-duzeni.html
+++ b/1.0/tr/kap-orgusu/parca-duzeni.html
@@ -1,6 +1,6 @@
 ---
 layout: s1n0/varsayilan
-title: Parça Düzeni
+title: Parça Düzeni - Kap Örgüsü
 ---
   <p>Kap örgüsünün en çok kullanılan özelliği parça düzenidir. Parça düzeni kararlı yüzdesel genişliklerle şablonlar oluşturmanız için hazırlanmıştır. Tek parçadan yani 1 parçadan 24 parçaya kadar tüm parça düzenlerini kullanıma sunar. "<span data-metin="ana">SAYI SAYIp</span>" değerleri html dosyasında istenilen ekran örgüsüne yazılarak kullanılır. SAYI 1 ile 24 arasında değer alabilir. Örneğin sayfayı ikiye ayırıp sol tarafın sağ taraftan iki kat daha geniş olmasını istiyorsunuz. Bunun için <a href="/1.0/tr/ekran-orgusu.html">data-gnl</a>="2 3p" <a href="/1.0/tr/ekran-orgusu.html">data-gnl</a>="1 3p" değerlerini tanımlaybilirsiniz.</p>
 
@@ -228,3 +228,6 @@ title: Parça Düzeni
   </div>
 
   <p></p>
+  ''' html
+    <div></div>
+  '''
