--- a/1.0/tr/kap-orgusu/parca-duzeni.html
+++ b/1.0/tr/kap-orgusu/parca-duzeni.html
@@ -228,6 +228,6 @@ title: Parça Düzeni - Kap Örgüsü
   </div>
 
   <p></p>
-  ```html
-    <div></div>
-  ```
+  {% highlight html %}
+  <div>as</div>
+  {% endhighlight %}
