--- a/1.0/tr/kap-orgusu/parca-duzeni.html
+++ b/1.0/tr/kap-orgusu/parca-duzeni.html
@@ -59,17 +59,17 @@ title: Parça Düzeni - Kap Örgüsü
     <div data-gnl="7 20p">
       7 20p
     </div>
-    <pre><code class="language-html">
-    &lt;div data-gnl=&quot;3 20p&quot;&gt;
+    {% highlight html %}
+    <div data-gnl="3 20p">
       3 20p
-    &lt;/div&gt;
-    &lt;div data-gnl=&quot;10 20p&quot;&gt;
+    </div>
+    <div data-gnl="10 20p">
       10 20p
-    &lt;/div&gt;
-    &lt;div data-gnl=&quot;7 20p&quot;&gt;
+    </div>
+    <div data-gnl="7 20p">
       7 20p
-    &lt;/div&gt;
-    </code></pre>
+    </div>
+    {% endhighlight %}
   </div>
 
   <div data-gnl="1 1p" class="önizleme">
@@ -93,26 +93,26 @@ title: Parça Düzeni - Kap Örgüsü
     <div data-gnl="7 20p">
       7 20p
     </div>
-    <pre><code class="language-html">
-    &lt;div data-gnl=&quot;1 3p&quot;&gt;
+    {% highlight html %}
+    <div data-gnl="1 3p">
       1 3p
-    &lt;/div&gt;
-    &lt;div data-gnl=&quot;1 3p&quot;&gt;
+    </div>
+    <div data-gnl="1 3p">
       1 3p
-    &lt;/div&gt;
-    &lt;div data-gnl=&quot;1 3p&quot;&gt;
+    </div>
+    <div data-gnl="1 3p">
       1 3p
-    &lt;/div&gt;
-    &lt;div data-gnl=&quot;3 20p&quot;&gt;
+    </div>
+    <div data-gnl="3 20p">
       3 20p
-    &lt;/div&gt;
-    &lt;div data-gnl=&quot;10 20p&quot;&gt;
+    </div>
+    <div data-gnl="10 20p">
       10 20p
-    &lt;/div&gt;
-    &lt;div data-gnl=&quot;7 20p&quot;&gt;
+    </div>
+    <div data-gnl="7 20p">
       7 20p
-    &lt;/div&gt;
-    </code></pre>
+    </div>
+    {% endhighlight %}
   </div>
 
   <p></p>
@@ -137,22 +137,22 @@ title: Parça Düzeni - Kap Örgüsü
         Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
       </div>
     </div>
-    <pre><code class="language-html">
-    &lt;div data-gnl=&quot;2 2p&quot;&gt;
-      &lt;div data-gnl=&quot;1 4p&quot;&gt;
+    {% highlight html %}
+    <div data-gnl="2 2p">
+      <div data-gnl="1 4p">
         Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-      &lt;/div&gt;
-      &lt;div data-gnl=&quot;1 4p&quot;&gt;
+      </div>
+      <div data-gnl="1 4p">
         Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-      &lt;/div&gt;
-      &lt;div data-gnl=&quot;1 4p&quot;&gt;
+      </div>
+      <div data-gnl="1 4p">
         Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-      &lt;/div&gt;
-      &lt;div data-gnl=&quot;1 4p&quot;&gt;
+      </div>
+      <div data-gnl="1 4p">
         Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-      &lt;/div&gt;
-    &lt;/div&gt;
-    </code></pre>
+      </div>
+    </div>
+    {% endhighlight %}
   </div>
 
   <p></p>
@@ -171,16 +171,16 @@ title: Parça Düzeni - Kap Örgüsü
         Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
       </div>
     </div>
-    <pre><code class="language-html">
-    &lt;div data-gnl=&quot;2 2p&quot;&gt;
-      &lt;div data-gnl=&quot;1&quot;&gt;
+    {% highlight html %}
+    <div data-gnl="2 2p">
+      <div data-gnl="1">
         Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
-      &lt;/div&gt;
-      &lt;div data-gnl=&quot;1&quot;&gt;
+      </div>
+      <div data-gnl="1">
         Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
-      &lt;/div&gt;
-    &lt;/div&gt;
-    </code></pre>
+      </div>
+    </div>
+    {% endhighlight %}
   </div>
 
   <p></p>
@@ -212,31 +212,28 @@ title: Parça Düzeni - Kap Örgüsü
         2 7p
       </div>
     </div>
-    <pre><code class="language-html">
-    &lt;div data-gnl=&quot;1 1p&quot;&gt;
-      &lt;div data-gnl=&quot;1g&quot;&gt;
+    {% highlight html %}
+    <div data-gnl="1 1p">
+      <div data-gnl="1g">
         1g
-      &lt;/div&gt;
-      &lt;div data-gnl=&quot;4g&quot;&gt;
+      </div>
+      <div data-gnl="4g">
         4g
-      &lt;/div&gt;
-      &lt;div data-gnl=&quot;2g&quot;&gt;
+      </div>
+      <div data-gnl="2g">
         2g
-      &lt;/div&gt;
-    &lt;/div&gt;
-    &lt;div data-gnl=&quot;1 1p&quot;&gt;
-      &lt;div data-gnl=&quot;1 7p&quot;&gt;
+      </div>
+    </div>
+    <div data-gnl="1 1p">
+      <div data-gnl="1 7p">
         1 7p
-      &lt;/div&gt;
-      &lt;div data-gnl=&quot;4 7p&quot;&gt;
+      </div>
+      <div data-gnl="4 7p">
         4 7p
-      &lt;/div&gt;
-      &lt;div data-gnl=&quot;2 7p&quot;&gt;
+      </div>
+      <div data-gnl="2 7p">
         2 7p
-      &lt;/div&gt;
-    &lt;/div&gt;
-    </code></pre>
+      </div>
+    </div>
+    {% endhighlight %}
   </div>
-
-  <p></p>
-  {% highlight html %}<div data-gnl="1 12p">as</div>{% endhighlight %}
