--- a/1.0/tr/kap-orgusu/parca-duzeni.html
+++ b/1.0/tr/kap-orgusu/parca-duzeni.html
@@ -25,16 +25,17 @@ title: Parça Düzeni - Kap Örgüsü
   <p></p>
   <div data-gnl="1 1p" class="önizleme">
     <h3>Önizleme: Örnek 1</h3>
-    <div data-gnl="1 3p">
-      1 3p
+    <div class="örnek">
+      <div data-gnl="1 3p">
+        1 3p
+      </div>
+      <div data-gnl="1 3p">
+        1 3p
+      </div>
+      <div data-gnl="1 3p">
+        1 3p
+      </div>
     </div>
-    <div data-gnl="1 3p">
-      1 3p
-    </div>
-    <div data-gnl="1 3p">
-      1 3p
-    </div>
-
     {% highlight html %}
     <div data-gnl="1 3p">
       1 3p
@@ -50,14 +51,16 @@ title: Parça Düzeni - Kap Örgüsü
 
   <div data-gnl="1 1p" class="önizleme">
     <h3>Önizleme: Örnek 2</h3>
-    <div data-gnl="3 20p">
-      3 20p
-    </div>
-    <div data-gnl="10 20p">
-      10 20p
-    </div>
-    <div data-gnl="7 20p">
-      7 20p
+    <div class="örnek">
+      <div data-gnl="3 20p">
+        3 20p
+      </div>
+      <div data-gnl="10 20p">
+        10 20p
+      </div>
+      <div data-gnl="7 20p">
+        7 20p
+      </div>
     </div>
     {% highlight html %}
     <div data-gnl="3 20p">
@@ -75,23 +78,25 @@ title: Parça Düzeni - Kap Örgüsü
   <div data-gnl="1 1p" class="önizleme">
     <h3>Önizleme: Örnek 3</h3>
     <p>Örnek 1 ve 2'yi bir arada işlemek</p>
-    <div data-gnl="1 3p">
-      1 3p
-    </div>
-    <div data-gnl="1 3p">
-      1 3p
-    </div>
-    <div data-gnl="1 3p">
-      1 3p
-    </div>
-    <div data-gnl="3 20p">
-      3 20p
-    </div>
-    <div data-gnl="10 20p">
-      10 20p
-    </div>
-    <div data-gnl="7 20p">
-      7 20p
+    <div class="örnek">
+      <div data-gnl="1 3p">
+        1 3p
+      </div>
+      <div data-gnl="1 3p">
+        1 3p
+      </div>
+      <div data-gnl="1 3p">
+        1 3p
+      </div>
+      <div data-gnl="3 20p">
+        3 20p
+      </div>
+      <div data-gnl="10 20p">
+        10 20p
+      </div>
+      <div data-gnl="7 20p">
+        7 20p
+      </div>
     </div>
     {% highlight html %}
     <div data-gnl="1 3p">
@@ -123,18 +128,20 @@ title: Parça Düzeni - Kap Örgüsü
   <p></p>
   <div data-gnl="1 1p" class="önizleme">
     <h3>Önizleme</h3>
-    <div data-gnl="2 2p">
-      <div data-gnl="1 4p">
-        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-      </div>
-      <div data-gnl="1 4p">
-        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-      </div>
-      <div data-gnl="1 4p">
-        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
-      </div>
-      <div data-gnl="1 4p">
-        Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+    <div class="örnek">
+      <div data-gnl="2 2p">
+        <div data-gnl="1 4p">
+          Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+        </div>
+        <div data-gnl="1 4p">
+          Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+        </div>
+        <div data-gnl="1 4p">
+          Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+        </div>
+        <div data-gnl="1 4p">
+          Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
+        </div>
       </div>
     </div>
     {% highlight html %}
@@ -163,12 +170,14 @@ title: Parça Düzeni - Kap Örgüsü
   <p></p>
   <div data-gnl="1 1p" class="önizleme">
     <h3>Önizleme</h3>
-    <div data-gnl="2 2p">
-      <div data-gnl="1">
-        Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
-      </div>
-      <div data-gnl="1">
-        Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
+    <div class="örnek">
+      <div data-gnl="2 2p">
+        <div data-gnl="1">
+          Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
+        </div>
+        <div data-gnl="1">
+          Tüm ekranlarda bulunduğu genişliğin yarısını kapla.
+        </div>
       </div>
     </div>
     {% highlight html %}
@@ -190,26 +199,28 @@ title: Parça Düzeni - Kap Örgüsü
   <p></p>
   <div data-gnl="1 1p" class="önizleme">
     <h3>Önizleme</h3>
-    <div data-gnl="1 1p">
-      <div data-gnl="1g">
-        1g
+    <div class="örnek">
+      <div data-gnl="1 1p">
+        <div data-gnl="1g">
+          1g
+        </div>
+        <div data-gnl="4g">
+          4g
+        </div>
+        <div data-gnl="2g">
+          2g
+        </div>
       </div>
-      <div data-gnl="4g">
-        4g
-      </div>
-      <div data-gnl="2g">
-        2g
-      </div>
-    </div>
-    <div data-gnl="1 1p">
-      <div data-gnl="1 7p">
-        1 7p
-      </div>
-      <div data-gnl="4 7p">
-        4 7p
-      </div>
-      <div data-gnl="2 7p">
-        2 7p
+      <div data-gnl="1 1p">
+        <div data-gnl="1 7p">
+          1 7p
+        </div>
+        <div data-gnl="4 7p">
+          4 7p
+        </div>
+        <div data-gnl="2 7p">
+          2 7p
+        </div>
       </div>
     </div>
     {% highlight html %}
