--- a/1.0/tr/kurulum.html
+++ b/1.0/tr/kurulum.html
@@ -16,20 +16,20 @@ title: deveb 1.0 kurulumu
     </p>
 
     <h2><span class="simget">deveb</span> Türkçe Sürüm</h2>
-    <pre data-gnl="1 1p"><code class="language-html">
-    &lt;head&gt;
-      &lt;link href=&quot;/css/deveb-s1n0/deveb.css&quot; rel=&quot;stylesheet&quot;&gt;
-      &lt;&#33;&#45;&#45; Edge 15 ve daha eski internet explorer sürümleri için arkayüzde dahil edilecek css dosyası &#45;&#45;&gt;
-      &lt;link href=&quot;/css/deveb-s1n0/deveb-ie.css&quot; rel=&quot;stylesheet&quot;&gt;
-    &lt;/head&gt;
-    </code></pre>
+    {% highlight html %}
+    <head>
+      <link href="/css/deveb-s1n0/deveb.css" rel="stylesheet">
+      <!-- Edge 15 ve daha eski internet explorer sürümleri için arkayüzde dahil edilecek css dosyası -->
+      <link href="/css/deveb-s1n0/deveb-ie.css" rel="stylesheet">
+    </head>
+    {% endhighlight %}
 
     <h2><span class="simget">deveb</span> English Version (not ready)</h2>
-    <pre data-gnl="1 1p"><code class="language-html">
-    &lt;head&gt;
-      &lt;link href=&quot;/css/deveb-s1n0/deveb-en.css&quot; rel=&quot;stylesheet&quot;&gt;
-    &lt;/head&gt;
-    </code></pre>
+    {% highlight html %}
+      <head>
+        <link href="/css/deveb-s1n0/deveb-en.css" rel="stylesheet">
+      </head>
+    {% endhighlight %}
 
     <p>Not: İngilizce diliyle geliştirilen sürüm, türkçe sürümü geriden takip etmektedir. Türkçe sürüme göre daha az özelliğe sahip olabilir ve hata durumu görülebilir.</p>
 </div>
